<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:layout_gravity="center"
    android:orientation="vertical">
    <!--    Heading-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#03A9F4"
        android:text="@string/wordle"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Display2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <RadioGroup
                android:id="@+id/rgLetters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#03A9E4"
                    android:text="@string/number_of_letters"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <RadioButton
                    android:id="@+id/rb3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:gravity="center"
                    android:text="@string/_3" />

                <RadioButton
                    android:id="@+id/rb4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:gravity="center"
                    android:text="@string/_4" />

                <RadioButton
                    android:id="@+id/rb5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:checked="true"
                    android:gravity="center"
                    android:text="@string/_5" />

                <RadioButton
                    android:id="@+id/rb6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:gravity="center"
                    android:text="@string/_6" />
            </RadioGroup>

            <Button
                android:id="@+id/btnStartGame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_game" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/gameSpace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:gravity="center"
            android:orientation="vertical">
            <!--    guess-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="visible">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvLives"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <EditText
                            android:id="@+id/etGuess"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:layout_weight="1"
                            android:autofillHints=""
                            android:hint="@string/guess" />
                        <Button
                            android:id="@+id/btnGuess"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="10dp"
                            android:text="@string/guess" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <include
                android:id="@+id/board4x3"
                layout="@layout/board4x3"
                android:visibility="gone" />

            <include
                android:id="@+id/board5x4"
                layout="@layout/board5x4"
                android:visibility="gone" />

            <include
                android:id="@+id/board6x5"
                layout="@layout/board6x5"
                android:visibility="gone" />

            <include
                android:id="@+id/board7x6"
                layout="@layout/board7x6"
                android:visibility="gone"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tvAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:visibility="gone" />
    </LinearLayout>
</LinearLayout>