<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5E5757"
    android:backgroundTint="#333131"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/navbar"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:background="#000000"
        android:gravity="center"
        android:text="@string/word_rank"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="284dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@id/play"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/navbar" />

    <Button
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="#27D52E"
        android:text="@string/play"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/spinner"
        app:layout_constraintTop_toBottomOf="@id/navbar" />

    <EditText
        android:id="@+id/guess"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/guess_the_word"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:textColor="#AFA5A5"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/guessbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner" />

    <Button
        android:id="@+id/guessbtn"
        android:layout_width="89dp"
        android:layout_height="47dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="#3AD140"
        android:text="@string/guess"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guess"
        app:layout_constraintTop_toBottomOf="@id/play" />


    <Button
        android:id="@+id/playagain"
        android:layout_width="270dp"
        android:layout_height="68dp"
        android:background="#26C32C"
        android:text="@string/play_again"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39" />

    <Button
        android:id="@+id/exit"
        android:layout_width="269dp"
        android:layout_height="71dp"
        android:background="#E3190A"
        android:text="@string/exit"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playagain"
        app:layout_constraintVertical_bias="0.352" />

    <Button
        android:id="@+id/hint"
        android:layout_width="67dp"
        android:layout_height="38dp"
        android:layout_marginBottom="16dp"
        android:background="#3C3939"
        android:text="HINT"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/anss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:textColor="#EA0404"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.289"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- ScrollView for results -->

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guessbtn">

        <LinearLayout
            android:id="@+id/resultContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="8dp">

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>